<resources>
    <string name="app_name">SplashScreenDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment_title">This is Home Fragment</string>
    <string name="dashboard_fragment_title">This is Dashboard Fragment</string>
    <string name="notification_fragment_title">This is Notification Fragment</string>

    <string name="Ibl_add_dish">ADD DISH</string>
    <string name="image_contentDescription">Image</string>
    <string name="Ibl_title">Title</string>
    <string name="Ibl_type">Type</string>
    <string name="Ibl_category">Category</string>
    <string name="Ibl_ingredients">Ingredients</string>
    <string name="Ibl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="Ibl_direction_to_cook">Direction To Cook</string>
    <string name="select_image_action">Select Image Action</string>
    <string name="camera_text">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT DISH CATEGORY</string>

    <string name="err_msg_select_dish_image">Select dish image</string>
    <string name="err_msg_enter_dish_title">Enter dish title</string>
    <string name="err_msg_select_dish_type">Select dish type</string>
    <string name="err_msg_select_dish_category">Select dish category</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time</string>
    <string name="err_msg_enter_dish_instructions">Enter dish cooking instructions</string>
    <string name="label_no_dishes_added_yet">No dishes added yet!!!</string>
</resources>