<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"
        android:text="@string/select_image_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/camera_img_Id"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_baseline_camera_alt_24"
            android:text="@string/camera_text"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/gallery_img_Id"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_baseline_galary_24"
            android:text="@string/gallery"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>